[gd_scene load_steps=4 format=3 uid="uid://feshrnb5sus4"]

[ext_resource type="Script" path="res://enemy_projectile.gd" id="1_x1d01"]
[ext_resource type="Texture2D" uid="uid://c2iq5kosjgokg" path="res://assets/enemy_raw_sheet.png" id="2_fqeaa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ggibv"]
radius = 4.0

[node name="EnemyProjectile" type="Area2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_x1d01")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(16, 16)
shape = SubResource("CapsuleShape2D_ggibv")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.794125
scale = Vector2(16, 16)
texture = ExtResource("2_fqeaa")
region_enabled = true
region_rect = Rect2(1409, 100, 17, 17)

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
